# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: 404.html  base.html  footer.html  form.html  home.html  index.html  navbar.html
task_manager/templates/labels/: delete.html  labels.html
task_manager/templates/statuses/: delete.html  statuses.html
task_manager/templates/tasks/: delete.html  task_show.html  tasks.html
task_manager/templates/users/: delete.html  users.html
task_manager/users/: forms.py  urls.py
task_manager/users/migrations/: 0001_initial.py
