[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["znammikhail <znamenskymihail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.3"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
django-bootstrap5 = "^23.3"
gunicorn = "^21.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
